Structure refactoring, additions and fixes